deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-front-service
spec:
  selector:
    app: erp-front
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
