deploy/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: erp-front-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - app.iguana.az
      port:
        name: http
        number: 80
        protocol: HTTP
