deploy/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: erp-front-service
spec:
  hosts:
    - app.iguana.az
  gateways:
    - erp-front-gateway
  http:
    - name: "erp-app-front-vs"
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: erp-front-service.default.svc.cluster.local
            port:
              number: 80
